src/tui/widgets/instances/snapshots/rmcl__tui__widgets__instances__tests__instances_list_renders_empty.snap
---
source: src/tui/widgets/instances/tests.rs
expression: terminal.backend()
---
"╭Instances─────────────────────────────╮"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"╰──────────────────────────────────────╯"
