src/tui/widgets/instances/snapshots/rmcl__tui__widgets__instances__tests__instances_list_renders_three_instances.snap
---
source: src/tui/widgets/instances/tests.rs
expression: terminal.backend()
---
"╭Instances─────────────────────────────╮"
"│▌ Vanilla 1.20.1                      ▲"
"│▌ Never played                        ║"
"│  Forge Pack                          ║"
"│  Never played                        ║"
"│  Fabric Test                         ║"
"│  Never played                        ║"
"│                                      ║"
"│                                      ║"
"│                                      │"
"│                                      ▼"
"╰──────────────────────────────────────╯"
